[gd_scene format=4 uid="uid://bw6yjq4g58c3"]

[ext_resource type="Script" uid="uid://bbenuwmws0yiv" path="res://scripts/floor_scripts/floor_2.gd" id="1_2kxia"]
[ext_resource type="TileSet" uid="uid://c5tlbrw8fohlj" path="res://resources/wall_tileset.tres" id="2_mffj3"]
[ext_resource type="TileSet" uid="uid://vfad4wvkctu0" path="res://resources/floor_tileset.tres" id="3_2kxia"]
[ext_resource type="Texture2D" uid="uid://cfe3rt3e44k15" path="res://assets/tilesets/CaveEntrance.png" id="4_2npgi"]
[ext_resource type="PackedScene" uid="uid://qcow2pkj11k1" path="res://scenes/floors/RoomBounds.tscn" id="5_5ml5n"]
[ext_resource type="Script" uid="uid://ckra3v8mj30x3" path="res://scripts/RoomBounds.gd" id="6_2kxia"]
[ext_resource type="PackedScene" uid="uid://bu3hyhaaugnhu" path="res://scenes/entities/Player.tscn" id="6_loese"]
[ext_resource type="PackedScene" uid="uid://c7svvywwun1h3" path="res://scenes/entities/Hero.tscn" id="7_mffj3"]
[ext_resource type="PackedScene" uid="uid://bdpnxnlxq2qir" path="res://scenes/ui/DialogueSystem.tscn" id="9_2npgi"]
[ext_resource type="Script" uid="uid://8kmye2ima3kc" path="res://scenes/floors/roomexit.gd" id="10_5ml5n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vfwqc"]
texture = ExtResource("4_2npgi")
5:0/0 = 0
4:1/0 = 0
4:1/0/probability = 0.5
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSet" id="TileSet_13n10"]
sources/0 = SubResource("TileSetAtlasSource_vfwqc")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ml5n"]
resource_local_to_scene = true
size = Vector2(512, 384)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_loese"]
resource_local_to_scene = true
size = Vector2(480, 256)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kxia"]
resource_local_to_scene = true
size = Vector2(608, 416)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2npgi"]
resource_local_to_scene = true
size = Vector2(16, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clhf8"]
resource_local_to_scene = true
size = Vector2(608, 36)

[node name="Floor2" type="Node2D" unique_id=1203568675]
script = ExtResource("1_2kxia")
floor_number = 5

[node name="GameplayRoot" type="Node2D" parent="." unique_id=933238444]

[node name="WallTop" type="TileMapLayer" parent="GameplayRoot" unique_id=755456392]
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAAAABQAAAAIAAAAAAAEABQACAAEAAAAAAAIABQACAAIAAAAAAAMABQACAAEAAAAAAAQABQACAAIAAAAAAAUABQACAAEAAAAAAAYABQACAAIAAAAAAAcABQACAAEAAAAAAAgABQACAAIAAAAAAAkABQACAAIAAAAAAAoABQACAAEAAAAAAAsABQACAAIAAAAAAAwABQACAAIAAAAAAA0ABQAAAAMAAAABAA0ABQAHAAIAAAACAAAABQADAAMAAAACAA0ABQADAAMAAAADAAAABQAEAAMAAAADAA0ABQADAAMAAAAEAAAABQAEAAMAAAAEAA0ABQAFAAMAAAAFAAAABQADAAMAAAAGAAAABQAEAAMAAAAHAAAABQADAAMAAAAIAAAABQAEAAMAAAAJAAAABQADAAMAAAAKAAAABQAEAAMAAAALAAAABQAEAAMAAAAMAAAABQAEAAMAAAANAAAABQAEAAMAAAAOAAAABQAEAAMAAAAPAAAABQAEAAMAAAAQAAAABQADAAMAAAARAAEABQACAAIAAAARAAIABQACAAIAAAARAAMABQACAAEAAAARAAQABQACAAEAAAARAAUABQACAAEAAAARAAkABQAHAAMAAAARAAoABQACAAIAAAARAAsABQACAAIAAAARAAwABQACAAIAAAARAA0ABQAIAAIAAAASAAkABQADAAMAAAATAAkABQADAAMAAAAUAAkABQADAAMAAAAVAAkABQADAAMAAAAWAAkABQAEAAMAAAAXAAkABQAEAAMAAAAYAAkABQAEAAMAAAAZAAkABQADAAMAAAAcAAkABQADAAMAAAAdAAkABQAEAAMAAAAeAAkABQADAAMAAAAfAAkABQADAAMAAAAgAAkABQADAAMAAAABAAAABQAEAAMAAAARAAAABQABAAIAAAARAAgABQACAAEAAAAQAA0ABQAEAAMAAAAPAA0ABQADAAMAAAAOAA0ABQAEAAMAAAANAA0ABQAEAAMAAAAMAA0ABQADAAMAAAALAA0ABQAEAAMAAAAKAA0ABQAEAAMAAAAJAA0ABQAEAAMAAAAIAA0ABQAGAAIAAAARAA4ABQACAAIAAAARAA8ABQACAAIAAAARABAABQACAAIAAAARABMABQACAAIAAAARABQABQACAAIAAAARABUABQACAAEAAAARABYABQAIAAIAAAARABcABQAAAAMAAAASABcABQAEAAMAAAATABcABQADAAMAAAAUABcABQADAAMAAAAVABcABQAEAAMAAAAWABcABQADAAMAAAAXABcABQAEAAMAAAAYABcABQADAAMAAAAZABcABQAEAAMAAAAaABcABQADAAMAAAAbABcABQAEAAMAAAAcABcABQADAAMAAAAdABcABQAEAAMAAAAeABcABQAEAAMAAAAfABcABQAEAAMAAAAgABcABQAEAAMAAAAhAAkABQADAAMAAAAiAAkABQAEAAMAAAAjAAkABQADAAMAAAAkAAkABQADAAMAAAAlAAkABQABAAIAAAAlAAoABQACAAEAAAAlAAsABQACAAIAAAAlAAwABQACAAIAAAAlAA0ABQACAAIAAAAlAA4ABQACAAIAAAAlAA8ABQACAAIAAAAlABIABQACAAEAAAAlABMABQACAAIAAAAlABQABQACAAIAAAAlABUABQACAAEAAAAlABYABQACAAEAAAAlABcABQABAAMAAAAkABcABQADAAMAAAAjABcABQADAAMAAAAiABcABQAEAAMAAAAhABcABQAEAAMAAAAlABAABQACAAEAAAAlABEABQACAAEAAAAbAAkABQAEAAMAAAAaAAkABQAEAAMAAAAEABYABQAEAAMAAAAFABYABQADAAMAAAAGABYABQAEAAMAAAAHABYABQAEAAMAAAAIABYABQADAAMAAAAJABYABQAEAAMAAAAKABYABQADAAMAAAALABYABQAEAAMAAAAMABYABQADAAMAAAANABYABQADAAMAAAAOABYABQAEAAMAAAAPABYABQADAAMAAAAQABYABQAEAAMAAAARAAYABQACAAEAAAARAAcABQACAAIAAAABAA4ABQACAAIAAAABAA8ABQACAAEAAAABABAABQACAAIAAAABABEABQACAAIAAAABABIABQACAAEAAAABABMABQACAAEAAAABABQABQACAAIAAAABABUABQACAAEAAAABABYABQAAAAMAAAACABYABQAEAAMAAAADABYABQADAAMAAAA=")
tile_set = ExtResource("2_mffj3")

[node name="Floor" type="TileMapLayer" parent="GameplayRoot" unique_id=715287931]
z_index = -1
texture_filter = 1
tile_map_data = PackedByteArray("AAABAAEABQADAAAAAAABAAIABQADAAAAAAABAAMABQADAAAAAAABAAQABQADAAAAAAABAAUABQADAAAAAAABAAYABQADAAAAAAABAAcABQADAAAAAAABAAgABQADAAAAAAACAAEABQADAAAAAAADAAEABQADAAAAAAAEAAEABQADAAAAAAAIAAEABQADAAAAAAAJAAEABQADAAAAAAAKAAEABQADAAAAAAALAAEABQADAAAAAAAMAAEABQADAAAAAAANAAEABQADAAAAAAAOAAEABQADAAAAAAAOAAIABQADAAAAAAAOAAMABQADAAAAAAAOAAQABQADAAAAAAAOAAUABQADAAAAAAAOAAYABQADAAAAAAAOAAcABQADAAAAAAAOAAgABQADAAAAAAANAAgABQADAAAAAAAMAAkABQADAAAAAAAJAAkABQADAAAAAAAIAAkABQADAAAAAAAEAAgABQADAAAAAAADAAgABQADAAAAAAACAAgABQADAAAAAAABAAkABQADAAAAAAABAAoABQADAAAAAAABAAsABQADAAAAAAABAAwABQADAAAAAAACAAIABQADAAAAAAACAAMABQADAAAAAAACAAQABQADAAAAAAACAAUABQADAAAAAAACAAYABQADAAAAAAACAAcABQADAAAAAAACAAkABQADAAAAAAACAAoABQADAAAAAAACAAsABQADAAAAAAACAAwABQADAAAAAAADAAIABQADAAAAAAADAAMABQADAAAAAAADAAQABQADAAAAAAADAAUABQADAAAAAAADAAYABQADAAAAAAADAAcABQADAAAAAAADAAkABQADAAAAAAADAAoABQADAAAAAAADAAsABQADAAAAAAADAAwABQADAAAAAAAEAAIABQADAAAAAAAEAAMABQADAAAAAAAEAAQABQADAAAAAAAEAAUABQADAAAAAAAEAAYABQADAAAAAAAEAAcABQADAAAAAAAEAAkABQADAAAAAAAEAAoABQADAAAAAAAEAAsABQADAAAAAAAEAAwABQADAAAAAAAFAAoABQACAAUAAAAFAAsABQACAAUAAAAFAAwABQACAAUAAAAGAAoABQADAAUAAAAGAAsABQADAAUAAAAGAAwABQADAAUAAAAHAAoABQAEAAUAAAAHAAsABQAEAAUAAAAHAAwABQAEAAUAAAAIAAIABQADAAAAAAAIAAMABQADAAAAAAAIAAQABQADAAAAAAAIAAUABQADAAAAAAAIAAYABQADAAAAAAAIAAcABQADAAAAAAAIAAgABQADAAAAAAAIAAoABQADAAAAAAAIAAsABQADAAAAAAAIAAwABQADAAAAAAAJAAIABQADAAAAAAAJAAMABQADAAAAAAAJAAQABQADAAAAAAAJAAUABQADAAAAAAAJAAYABQADAAAAAAAJAAcABQADAAAAAAAJAAgABQADAAAAAAAJAAoABQADAAAAAAAJAAsABQADAAAAAAAJAAwABQADAAAAAAAKAAIABQADAAAAAAAKAAMABQADAAAAAAAKAAQABQADAAAAAAAKAAUABQADAAAAAAAKAAYABQADAAAAAAAKAAcABQADAAAAAAAKAAoABQADAAAAAAAKAAsABQADAAAAAAAKAAwABQADAAAAAAALAAIABQADAAAAAAALAAMABQADAAAAAAALAAQABQADAAAAAAALAAUABQADAAAAAAALAAYABQADAAAAAAALAAcABQADAAAAAAALAAoABQADAAAAAAALAAsABQADAAAAAAALAAwABQADAAAAAAAMAAIABQADAAAAAAAMAAMABQADAAAAAAAMAAQABQADAAAAAAAMAAUABQADAAAAAAAMAAYABQADAAAAAAAMAAcABQADAAAAAAAMAAgABQADAAAAAAAMAAoABQADAAAAAAAMAAsABQADAAAAAAAMAAwABQADAAAAAAANAAIABQADAAAAAAANAAMABQADAAAAAAANAAQABQADAAAAAAANAAUABQADAAAAAAANAAYABQADAAAAAAANAAcABQADAAAAAAANAAkABQADAAAAAAANAAoABQADAAAAAAANAAsABQADAAAAAAANAAwABQADAAAAAAAOAAkABQADAAAAAAAOAAoABQADAAAAAAAOAAsABQADAAAAAAAOAAwABQADAAAAAAAPAAEABQADAAAAAAAPAAIABQADAAAAAAAPAAMABQADAAAAAAAPAAQABQADAAAAAAAPAAUABQADAAAAAAAPAAYABQADAAAAAAAPAAcABQADAAAAAAAPAAgABQADAAAAAAAPAAkABQADAAAAAAAPAAoABQADAAAAAAAPAAsABQADAAAAAAAPAAwABQADAAAAAAAQAAEABQADAAAAAAAQAAIABQADAAAAAAAQAAMABQADAAAAAAAQAAQABQADAAAAAAAQAAUABQADAAAAAAAQAAYABQADAAAAAAAQAAcABQADAAAAAAAQAAgABQADAAAAAAAQAAkABQADAAAAAAAQAAoABQADAAAAAAAQAAsABQADAAAAAAAQAAwABQADAAAAAAALAAgABQADAAAAAAAKAAgABQADAAAAAAAKAAkABQADAAAAAAALAAkABQADAAAAAAAaAAoABQADAAAAAAAbAAoABQADAAAAAAAZAAoABQADAAAAAAAYAAoABQADAAAAAAAXAAoABQADAAAAAAAWAAoABQADAAAAAAAVAAoABQADAAAAAAAUAAoABQADAAAAAAATAAoABQADAAAAAAASAAoABQADAAAAAAASAAsABQADAAAAAAASAAwABQADAAAAAAASAA0ABQADAAAAAAASAA4ABQADAAAAAAASAA8ABQADAAAAAAASABAABQADAAAAAAASABMABQADAAAAAAATAA4ABQADAAAAAAATAA0ABQADAAAAAAATAAwABQADAAAAAAATAAsABQADAAAAAAAUAAsABQADAAAAAAAUAAwABQADAAAAAAAUAA0ABQADAAAAAAAUAA4ABQADAAAAAAAUAA8ABQADAAAAAAAUABAABQADAAAAAAATABAABQADAAAAAAATAA8ABQADAAAAAAATABMABQADAAAAAAAVAAsABQADAAAAAAAWAAwABQADAAAAAAAWAA0ABQADAAAAAAAWAA4ABQADAAAAAAAWAA8ABQADAAAAAAAVAA8ABQADAAAAAAAVABAABQADAAAAAAAVABEABQADAAAAAAAVABIABQADAAAAAAAVABMABQADAAAAAAAVAA4ABQADAAAAAAAVAA0ABQADAAAAAAAVAAwABQADAAAAAAAWAAsABQADAAAAAAAXAAsABQADAAAAAAAYAAsABQADAAAAAAAZAAsABQADAAAAAAAZAAwABQADAAAAAAAZAA0ABQADAAAAAAAZAA4ABQADAAAAAAAZAA8ABQADAAAAAAAZABAABQADAAAAAAAZABEABQADAAAAAAAZABIABQADAAAAAAAZABMABQADAAAAAAAZABQABQADAAAAAAAYABQABQADAAAAAAAYABMABQADAAAAAAAXABMABQADAAAAAAAXABIABQADAAAAAAAXABEABQADAAAAAAAXABAABQADAAAAAAAXAA8ABQADAAAAAAAXAA4ABQADAAAAAAAXAA0ABQADAAAAAAAYAA0ABQADAAAAAAAYAAwABQADAAAAAAAYAA4ABQADAAAAAAAYABAABQADAAAAAAAYABEABQADAAAAAAAYABIABQADAAAAAAAXAAwABQADAAAAAAAYAA8ABQADAAAAAAAWABAABQADAAAAAAAWABEABQADAAAAAAAWABIABQADAAAAAAAWABMABQADAAAAAAAUABMABQADAAAAAAAUABQABQADAAAAAAATABQABQADAAAAAAASABQABQADAAAAAAASABUABQADAAAAAAASABYABQADAAAAAAATABYABQADAAAAAAAUABYABQADAAAAAAAUABUABQADAAAAAAATABUABQADAAAAAAAVABQABQADAAAAAAAWABQABQADAAAAAAAXABQABQADAAAAAAAXABUABQADAAAAAAAWABUABQADAAAAAAAVABUABQADAAAAAAAWABYABQADAAAAAAAXABYABQADAAAAAAAVABYABQADAAAAAAAYABYABQADAAAAAAAZABYABQADAAAAAAAZABUABQADAAAAAAAYABUABQADAAAAAAAaABUABQADAAAAAAAaABYABQADAAAAAAAbABYABQADAAAAAAAbABUABQADAAAAAAAbABQABQADAAAAAAAcABMABQADAAAAAAAcAAoABQADAAAAAAAcAAsABQADAAAAAAAcAAwABQADAAAAAAAcAA0ABQADAAAAAAAcAA4ABQADAAAAAAAcAA8ABQADAAAAAAAcABAABQADAAAAAAAcABEABQADAAAAAAAcABIABQADAAAAAAAcABQABQADAAAAAAAcABUABQADAAAAAAAcABYABQADAAAAAAAdABYABQADAAAAAAAdABUABQADAAAAAAAdABQABQADAAAAAAAdABMABQADAAAAAAAeABMABQADAAAAAAAeABIABQADAAAAAAAeABEABQADAAAAAAAdABEABQADAAAAAAAdABAABQADAAAAAAAdAA8ABQADAAAAAAAdAA4ABQADAAAAAAAdAA0ABQADAAAAAAAdAAwABQADAAAAAAAdAAsABQADAAAAAAAdAAoABQADAAAAAAAdABIABQADAAAAAAAeAAsABQADAAAAAAAeAAoABQADAAAAAAAeAAwABQADAAAAAAAeAA0ABQADAAAAAAAfAA0ABQADAAAAAAAfAA4ABQADAAAAAAAfAA8ABQADAAAAAAAfABAABQADAAAAAAAfABEABQADAAAAAAAfABIABQADAAAAAAAeABQABQADAAAAAAAeABUABQADAAAAAAAeABYABQADAAAAAAAeABAABQADAAAAAAAeAA8ABQADAAAAAAAeAA4ABQADAAAAAAAfABMABQADAAAAAAAfABQABQADAAAAAAAfABUABQADAAAAAAAfABYABQADAAAAAAAfAAwABQADAAAAAAAfAAsABQADAAAAAAAfAAoABQADAAAAAAAgAAoABQADAAAAAAAgAAsABQADAAAAAAAgAAwABQADAAAAAAAgAA0ABQADAAAAAAAgAA4ABQADAAAAAAAhAA4ABQADAAAAAAAhAA8ABQADAAAAAAAhABAABQADAAAAAAAhABEABQADAAAAAAAhABIABQADAAAAAAAhABMABQADAAAAAAAhABQABQADAAAAAAAgABUABQADAAAAAAAgABYABQADAAAAAAAgABQABQADAAAAAAAgABMABQADAAAAAAAgABIABQADAAAAAAAgABEABQADAAAAAAAgABAABQADAAAAAAAgAA8ABQADAAAAAAAhAAwABQADAAAAAAAhAAsABQADAAAAAAAhAAoABQADAAAAAAAhAA0ABQADAAAAAAAiAA0ABQADAAAAAAAiAA4ABQADAAAAAAAiAA8ABQADAAAAAAAhABUABQADAAAAAAAhABYABQADAAAAAAAiAAoABQADAAAAAAAiAAsABQADAAAAAAAiAAwABQADAAAAAAAjAA4ABQADAAAAAAAjAA8ABQADAAAAAAAjABAABQADAAAAAAAjABEABQADAAAAAAAjABIABQADAAAAAAAjABMABQADAAAAAAAjABQABQADAAAAAAAjABUABQADAAAAAAAiABUABQADAAAAAAAiABYABQADAAAAAAAiABQABQADAAAAAAAiABMABQADAAAAAAAiABIABQADAAAAAAAiABEABQADAAAAAAAiABAABQADAAAAAAAjAAsABQADAAAAAAAjAAoABQADAAAAAAAjAAwABQADAAAAAAAjAA0ABQADAAAAAAAjABYABQADAAAAAAAkABYABQADAAAAAAAkABUABQADAAAAAAAkABQABQADAAAAAAAkABMABQADAAAAAAAkABIABQADAAAAAAAkABEABQADAAAAAAAkABAABQADAAAAAAAkAA8ABQADAAAAAAAkAA4ABQADAAAAAAAkAA0ABQADAAAAAAAkAAwABQADAAAAAAAkAAsABQADAAAAAAAkAAoABQADAAAAAAAaAAsABQADAAAAAAAbAAsABQADAAAAAAAbAAwABQADAAAAAAAaAAwABQADAAAAAAAaAA0ABQADAAAAAAAbAA0ABQADAAAAAAAaAA4ABQADAAAAAAAbAA8ABQADAAAAAAAbAA4ABQADAAAAAAAaAA8ABQADAAAAAAAaABAABQADAAAAAAAaABEABQADAAAAAAAaABIABQADAAAAAAAbABIABQADAAAAAAAbABMABQADAAAAAAAbABEABQADAAAAAAAbABAABQADAAAAAAAaABMABQADAAAAAAAaABQABQADAAAAAAAHAA8ABQAEAAYAAAAHAA4ABQAEAAUAAAAHAA0ABQAEAAUAAAAHAAkABQAEAAUAAAAHAAgABQAEAAUAAAAHAAcABQAEAAQAAAAGAA8ABQADAAYAAAAGAA4ABQADAAUAAAAGAA0ABQADAAUAAAAGAAkABQADAAUAAAAGAAgABQADAAUAAAAGAAcABQADAAQAAAAFAA8ABQACAAYAAAAFAA4ABQACAAUAAAAFAA0ABQACAAUAAAAFAAkABQACAAUAAAAFAAgABQACAAUAAAAFAAcABQACAAQAAAAFAAEABQADAAAAAAAFAAIABQADAAAAAAAFAAMABQADAAAAAAAFAAQABQADAAAAAAAFAAUABQADAAAAAAAFAAYABQADAAAAAAAGAAYABQADAAAAAAAGAAUABQADAAAAAAAGAAQABQADAAAAAAAGAAMABQADAAAAAAAGAAIABQADAAAAAAAGAAEABQADAAAAAAAHAAEABQADAAAAAAAHAAIABQADAAAAAAAHAAMABQADAAAAAAAHAAQABQADAAAAAAAHAAUABQADAAAAAAAHAAYABQADAAAAAAAIAA4ABQADAAAAAAAIAA8ABQADAAAAAAAIABAABQADAAAAAAAIABEABQADAAAAAAAIABIABQADAAAAAAAIABMABQADAAAAAAAIABQABQADAAAAAAAIABUABQADAAAAAAAJABUABQADAAAAAAAKABUABQADAAAAAAALABUABQADAAAAAAAMABUABQADAAAAAAANABUABQADAAAAAAAOABUABQADAAAAAAAPABUABQADAAAAAAAQABUABQADAAAAAAAQABQABQADAAAAAAAQABMABQADAAAAAAAQABAABQADAAAAAAAQAA8ABQADAAAAAAAQAA4ABQADAAAAAAAPAA4ABQADAAAAAAAOAA4ABQADAAAAAAANAA4ABQADAAAAAAAMAA4ABQADAAAAAAALAA4ABQADAAAAAAAKAA4ABQADAAAAAAAJAA4ABQADAAAAAAAJAA8ABQADAAAAAAAJABAABQADAAAAAAAJABEABQADAAAAAAAJABIABQADAAAAAAAJABMABQADAAAAAAAJABQABQADAAAAAAAKABQABQADAAAAAAALABQABQADAAAAAAAMABQABQADAAAAAAANABQABQADAAAAAAAOABQABQADAAAAAAAPABQABQADAAAAAAAKAA8ABQADAAAAAAAKABAABQADAAAAAAAKABEABQADAAAAAAAKABIABQADAAAAAAAKABMABQADAAAAAAALAA8ABQADAAAAAAALABAABQADAAAAAAALABEABQADAAAAAAALABIABQADAAAAAAALABMABQADAAAAAAAMAA8ABQADAAAAAAAMABAABQADAAAAAAAMABEABQADAAAAAAAMABIABQADAAAAAAAMABMABQADAAAAAAANAA8ABQADAAAAAAANABAABQADAAAAAAANABEABQADAAAAAAANABIABQADAAAAAAANABMABQADAAAAAAAOAA8ABQADAAAAAAAOABAABQADAAAAAAAOABEABQADAAAAAAAOABIABQADAAAAAAAOABMABQADAAAAAAAPAA8ABQADAAAAAAAPABAABQADAAAAAAAPABMABQADAAAAAAACABAABQADAAAAAAACABEABQADAAAAAAACABIABQADAAAAAAACABMABQADAAAAAAACABQABQADAAAAAAACABUABQADAAAAAAADABAABQADAAAAAAADABEABQADAAAAAAADABIABQADAAAAAAADABMABQADAAAAAAADABQABQADAAAAAAADABUABQADAAAAAAAEABAABQADAAAAAAAEABEABQADAAAAAAAEABIABQADAAAAAAAEABMABQADAAAAAAAEABQABQADAAAAAAAEABUABQADAAAAAAAFABAABQADAAAAAAAFABEABQADAAAAAAAFABIABQADAAAAAAAFABMABQADAAAAAAAFABQABQADAAAAAAAFABUABQADAAAAAAAGABAABQADAAAAAAAGABEABQADAAAAAAAGABIABQADAAAAAAAGABMABQADAAAAAAAGABQABQADAAAAAAAGABUABQADAAAAAAAHABAABQADAAAAAAAHABEABQADAAAAAAAHABIABQADAAAAAAAHABMABQADAAAAAAAHABQABQADAAAAAAAHABUABQADAAAAAAACAA4ABQADAAAAAAACAA8ABQADAAAAAAADAA4ABQADAAAAAAADAA8ABQADAAAAAAAEAA4ABQADAAAAAAAEAA8ABQADAAAAAAAPABEABQACAAQAAAAPABIABQACAAYAAAAQABIABQADAAYAAAAQABEABQADAAQAAAARABEABQADAAQAAAASABEABQADAAQAAAASABIABQADAAYAAAARABIABQADAAYAAAATABEABQADAAQAAAAUABEABQAEAAQAAAAUABIABQAEAAYAAAATABIABQADAAYAAAA=")
tile_set = ExtResource("3_2kxia")

[node name="Props" type="TileMapLayer" parent="GameplayRoot" unique_id=1064715209]
texture_filter = 1
tile_set = SubResource("TileSet_13n10")

[node name="RoomBounds" parent="GameplayRoot" unique_id=1634083806 instance=ExtResource("5_5ml5n")]

[node name="CollisionShape2D" parent="GameplayRoot/RoomBounds" index="0" unique_id=1936798602]
position = Vector2(288, 224)
shape = SubResource("RectangleShape2D_5ml5n")

[node name="RoomBounds2" parent="GameplayRoot" unique_id=2137187623 instance=ExtResource("5_5ml5n")]

[node name="CollisionShape2D" parent="GameplayRoot/RoomBounds2" index="0" unique_id=1936798602]
position = Vector2(304, 576)
shape = SubResource("RectangleShape2D_loese")

[node name="RoomBounds3" type="Area2D" parent="GameplayRoot" unique_id=191301711]
script = ExtResource("6_2kxia")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameplayRoot/RoomBounds3" unique_id=1090180645]
position = Vector2(880, 528)
shape = SubResource("RectangleShape2D_2kxia")

[node name="Player" parent="GameplayRoot" unique_id=1644669309 instance=ExtResource("6_loese")]
position = Vector2(56, 56)

[node name="BossSpawner" type="Area2D" parent="GameplayRoot" unique_id=837335178]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameplayRoot/BossSpawner" unique_id=1998191906]
position = Vector2(560, 576)
shape = SubResource("RectangleShape2D_2npgi")

[node name="MainCharacter" parent="." unique_id=990402041 instance=ExtResource("7_mffj3")]
process_mode = 4
position = Vector2(1144, 360)

[node name="DialogueSystem" parent="." unique_id=1297630051 instance=ExtResource("9_2npgi")]

[node name="ExitDoor" parent="." unique_id=418589355 instance=ExtResource("5_5ml5n")]
script = ExtResource("10_5ml5n")
floor_number = 2

[node name="CollisionShape2D" parent="ExitDoor" index="0" unique_id=1936798602]
position = Vector2(880, 718)
shape = SubResource("RectangleShape2D_clhf8")

[connection signal="body_entered" from="GameplayRoot/RoomBounds3" to="GameplayRoot/RoomBounds3" method="_on_body_entered"]
[connection signal="body_entered" from="GameplayRoot/BossSpawner" to="." method="_on_boss_spawner_body_entered"]

[editable path="GameplayRoot/RoomBounds"]
[editable path="GameplayRoot/RoomBounds2"]
[editable path="ExitDoor"]
